syntax = "proto3";

option java_package = "com.example.com";
option java_outer_classname = "voteProposalMessage";

package vote_proposal_message;

service BlockchainVoteProposalService {
  rpc ProposalVote(VoteProposalRequest) returns (VoteProposalResponse);
}

message VoteProposalRequest {
  string topic = 1;
  int64 duration = 2;
}

message VoteProposalResponse {
  string status = 1;
  string message = 2;
  bool success = 3;
}